--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>POLICE DISPATCH TERMINAL</title>
+  <title>KML Tracking</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cesium@latest/Build/Cesium/Widgets/widgets.css">
   <link rel="stylesheet" href="assets/css/style.css">
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <div>DISPATCH SYSTEM [UNIT: A-17]</div>
+    <div>SDN</div>
     <div class="header-right">STATUS: TRACKING ACTIVE</div>
   </header>
 
